--- a/常用命令.md
+++ b/常用命令.md
@@ -1,4 +1,6 @@
-常用命令
-1 uname 查看当前是什么系统
-2 uname -n 查看当前系统的 hostname
-3 oslevel 查看当前系统的版本
+# 常用命令
+
+|uname |查看当前是什么系统|
+|------|------------|
+|uname -n| 查看当前系统的 hostname|
+|oslevel| 查看当前系统的版本|
